add timezone, update autoload

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "autoload": {
         "psr-0": {
             "Lang": "lib/"
-        }
+        },
+        "files": ["timezone.php"]
     }
 }
